# MilkDrop3

./: .gitignore  CHANGELOG.MD  README.md  TODO.MD  milkdrop3
code/: CMakeLists.txt  wdltypes.h
code/audio/: audiobuf.cpp  audiobuf.h  cleanup.h  common.h  log.cpp  log.h  loopback-capture-portaudio.cpp  loopback-capture.h  prefs.h
code/ns-eel2/: ns-eel-int.h  ns-eel.h  nseel-cfunc.c  nseel-compiler.c  win_dirent.h  y.tab.h
code/ns-eel2/scripts/: movingStatistics.eel
code/vis_milk2/: glad.c  glad.h  glcontext.cpp  glcontext.h  main.cpp  md_defines.h  menu.cpp  menu.h  milkdropfs.cpp  plugin.cpp  plugin.h  pluginshell.cpp  pluginshell.h  resource.h  shell_defines.h  state.cpp  state.h  support.cpp  support.h  texmgr.cpp  texmgr.h  text_renderer.cpp  text_renderer.h  textmgr.cpp  textmgr.h  utility.cpp  utility.h  wasabi.cpp  wasabi.h
data/shaders/: menu_fs.glsl  sprite_fs.glsl  sprite_vs.glsl
plugins/MilkDrop2/presets/: test.milk
